2002-07-23  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/vfs/vfs.py (FS.split_extra): added FS method for finding
	extra path info.

2002-07-23  Jacob Smullyan  <jsmullyan@wnyc.org>

	* SkunkWeb/util/cache_reaper.py.in: add @libdir@/pylibs to
	sys.path, and set default cache directory to @prefix@/cache.
	Thanks to Simo Salminen for pointing out that this would be a good
	idea.

2002-07-20  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/ae_component.py (__initConfig): error
	in specifying default docroot.

2002-07-19  Jacob Smullyan  <jsmullyan@wnyc.org>

	* SkunkWeb/Services/templating/__init__.py (__initHooks),
	SkunkWeb/Services/httpd/protocol.py: now import RequestFailed
	from requestHandler, not aecgi.

	* SkunkWeb/Services/aecgi.py: import RequestFailed from
	requestHandler.protocol, for backwards compatibility.

	* SkunkWeb/Services/requestHandler/protocol.py: moved
	RequestFailed here from aecgi.py.

2002-07-15  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/AE/MsgCatalog.py: MessageCatalogs now have a hasMessage()
	method, and getMessage can be now be used with a default value, or
	not. 

	* SkunkWeb/Services/ae_component.py (__initConfig): use
	DEFAULT_DOCROOT for mergeDefaulting into
	Configuration.documentRoot. 

	* SkunkWeb/SkunkWeb/confvars.py.in (DEFAULT_DOCROOT): captured 
	the DOCROOT configure variable.

	* SkunkWeb/SkunkWeb/ConfigAdditives.py (File, __all__): added
	RegexMatcher for location (File).

	* SkunkWeb/Services/rewrite.py: now test whether sessionDict has
	the relevant keys before deleting them.

2002-07-15  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* SkunkWeb/Services/extcgi.py (_dispenv): made it 2.1 compliant,
	and removed the if statment that should always be true.

2002-07-12  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* SkunkWeb/Services/templating/pil_preload.py: imports the
	entirety of the PIL package

	* SkunkWeb/Services/templating/UrlBuilder.py: now imports